fixing spacing
also deploy time damned
more content, only school page

--- a/public/styles.css
+++ b/public/styles.css
@@ -152,3 +152,7 @@ code {
 	border: 1px solid rgba(255, 255, 255, 0.1);
 	color: #e0e0e0;
 }
+
+.small_lineheight {
+	line-height: 0px;
+}
